--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,28 +1,44 @@
 #grid-view{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    display: flex;
+    flex-wrap:wrap;
+    width: 100vw;
+    height: 100vh;
 }
 #multi-data-chart{
-    grid-row-start:1;
-    grid-column-start: 2;
-    margin: 10px;
+    width: 30%;
+    height: 50%;
 }
 #horiz-bar{
-    grid-row-start:1;
-    grid-column-start: 0;
-    margin: 10px;
+    width: 30%;
+    height: 50%;
 }
 
 #area-chart{
-    grid-row-start:1;
-    grid-column-start: 1;
-    margin: 10px;
+    width: 30%;
+    height: 50%;
 }
 
 #vert-bar{
-    grid-row-start:0;
-    grid-column-start: 1;
-    grid-column-end: 4;
-    margin: 10px;
+    width: 90%;
+    height: 50%;
 }
+.parent{
+    width: 100%;
+    height: 100%;
+}
+
+@media screen and (max-width: 1024px) {
+    #horiz-bar{
+        width: 100%;
+        height: 90%;
+    }
+    #multi-data-chart{
+        width: 100%;
+        height: 90%;
+    }
+    
+    #area-chart{
+        width: 100%;
+        height: 90%;
+    }
+  }
