--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,11 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+g.ng-star-inserted text.textDataLabel{
+    margin: 5px;
+    text-anchor: end;
+}
+
 
 .mat-icon.mat-icon-logo {
     position: relative;
