--- a/src/app/multi-data-chart/data-chart-row/data-chart-row.component.css
+++ b/src/app/multi-data-chart/data-chart-row/data-chart-row.component.css
@@ -3,20 +3,23 @@
     grid-template-columns: 20% 25% 20% 35%;
     box-shadow: 0 2px 2px -2px gray;
 }
-#title{
+.title{
   text-align: center;
-  margin: 5px;
+  margin: auto;
 }
-#title-text{
+.title-text{
     display: inline-block;
     vertical-align: middle;
     line-height: normal;
+    font-size:15px;
 }
-#amount{
+
+
+.amount{
   text-align: center;
-  margin: 7px;
+  margin: auto;
 }
-#amount-text{
+.amount-text{
     display: inline-block;
     vertical-align: middle;
     line-height: normal;
@@ -39,10 +42,12 @@
 .line-of-progress{
     display: flex;
     align-content: center;
+
 }
 .line{
     height: 70%;
     background-color: black;
     display: inline-block;
     align-self: center;
+    background-color: #9f9f9f;
 }
