--- a/src/app/multi-data-chart/data-chart-row/data-chart-row.component.html
+++ b/src/app/multi-data-chart/data-chart-row/data-chart-row.component.html
@@ -4,7 +4,7 @@
             {{title}}
         </span>
     </h6>
-    <div>
+    <div class="vert-bar-parent">
         <div id="vert-bar" #parentVert>
             <app-stacked-vert-bar-chart [parent]="parentVert" [chartData]='vartChartData' [data]="vartData">
             </app-stacked-vert-bar-chart>
