--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,24 +1,28 @@
 #grid-view{
     display: flex;
     flex-wrap:wrap;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 #multi-data-chart{
+    padding: 10px;
     width: 30%;
     height: 50%;
 }
 #horiz-bar{
+    padding: 10px;
     width: 30%;
     height: 50%;
 }
 
 #area-chart{
+    padding: 10px;
     width: 30%;
     height: 50%;
 }
 
 #vert-bar{
+    padding-top: 30px;
     width: 90%;
     height: 50%;
 }
@@ -27,7 +31,7 @@
     height: 100%;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1000px) {
     #horiz-bar{
         width: 100%;
         height: 90%;
